--- a/Locale/jpn/LC_MESSAGES/roles.po
+++ b/Locale/jpn/LC_MESSAGES/roles.po
@@ -27,7 +27,7 @@ msgstr "ルーム管理者の協力者。プラグインを活用して、自由
 
 msgid "RoomRoleDesc.editor"
 msgstr "編集長の協力者。コンテンツを投稿することができ、同時に他人の投稿したコンテンツも修正することができます。"
-"但し、承認機能が有効になっている場合には、コンテンツを公開することはできません。<br>"
+"但し、承認機能が有効になっている場合には、コンテンツを公開することはできません。"
 "※ルーム管理プラグインで、公開権限を付与することもできます。"
 
 msgid "RoomRoleDesc.general_user"
